Done with the FinishScreen, points are now displayed in this final view

--- a/src/index.css
+++ b/src/index.css
@@ -155,6 +155,17 @@ progress::-webkit-progress-value {
   border-radius: 10px;
 }
 
+.results {
+  font-size: 1.5rem;
+}
+
+.finish {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
 footer {
   position: fixed;
   bottom: 0;
