--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,11 @@ header {
   margin-bottom: 3rem;
 }
 
+select,
+option {
+  cursor: pointer;
+}
+
 header h1 {
   font-size: 6rem;
   text-align: center;
