--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ header h1 {
 .intro,
 /* .question, */
 .loader,
-.quiz {
+.quiz, .finish, form {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -169,6 +169,7 @@ progress::-webkit-progress-value {
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  text-align: center;
 }
 
 form {
@@ -186,8 +187,10 @@ form label {
 form input,
 form select {
   font-family: inherit;
-  padding: 0.5rem;
+  padding: 0.7rem;
   font-weight: 500;
+  border: 1px solid #2f4f4f;
+  border-radius: 1rem;
 }
 
 .field {
