Done with design changes and functionality, project to be deployed

--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ header h1 {
 
 .btn:disabled:hover {
   /* background: initial; */
-  cursor: progress;
+  cursor: default;
 }
 
 .progress-bar {
